# python_equatable

./: README.md  setup.cfg
src/equatable/: __init__.py  equatable.py
test/: test_equatable.py
