[metadata]
name = equatable
version = 0.0.1
author = Isaac Clinton
description = Enables comparison of objects of the same class using specific class attributes only
long_description = file: README.md

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src